[gd_scene load_steps=10 format=2]

[ext_resource path="res://Stickman.tscn" type="PackedScene" id=1]
[ext_resource path="res://Map1.gd" type="Script" id=2]
[ext_resource path="res://EndArea.gd" type="Script" id=3]
[ext_resource path="res://LevelArea.gd" type="Script" id=4]
[ext_resource path="res://Trap.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 526.752, 312.982 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 74.6359, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.70808, 25.7457 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="LevelArea" type="Area2D" parent="."]
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelArea"]
position = Vector2( 0.451721, 2.0853 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="ColorRect" parent="."]
margin_left = -511.0
margin_top = -300.0
margin_right = 510.0
margin_bottom = 298.0
color = Color( 0.470588, 0.470588, 0.470588, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="FpsLabel" type="Label" parent="."]
margin_left = -502.44
margin_top = -291.356
margin_right = -462.44
margin_bottom = -277.356
text = "FPS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FpsValue" type="Label" parent="."]
margin_left = -463.33
margin_top = -291.211
margin_right = -423.33
margin_bottom = -277.211
rect_pivot_offset = Vector2( 486.605, 265.058 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
margin_left = -503.729
margin_top = -258.318
margin_right = -463.729
margin_bottom = -244.318
rect_pivot_offset = Vector2( 230.886, 174.879 )
text = "Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreValue" type="Label" parent="."]
margin_left = -463.33
margin_top = -258.211
margin_right = -423.33
margin_bottom = -244.211
rect_pivot_offset = Vector2( 486.605, 265.058 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="."]
margin_left = -503.729
margin_top = -275.318
margin_right = -463.729
margin_bottom = -261.318
rect_pivot_offset = Vector2( 230.886, 174.879 )
text = "Time"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerValue" type="Label" parent="."]
margin_left = -463.33
margin_top = -275.211
margin_right = -423.33
margin_bottom = -261.211
rect_pivot_offset = Vector2( 486.605, 265.058 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 1 )]
script = ExtResource( 7 )

[node name="Platforms" type="StaticBody2D" parent="."]
position = Vector2( -353.184, 174.052 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms"]
position = Vector2( 74.1629, 5.909 )
shape = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Platforms/CollisionShape2D"]
margin_left = -74.6091
margin_top = -9.23627
margin_right = 77.3909
margin_bottom = 10.7637
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Platforms"]
position = Vector2( 382.732, -82.4656 )
shape = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Platforms/CollisionShape2D2"]
margin_left = -73.0
margin_top = -10.8909
margin_right = 70.0
margin_bottom = 9.10907
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Trap" parent="." instance=ExtResource( 5 )]
position = Vector2( -143, 107 )
rotation_speed = 0.0
rotation_dir = 0
movement_speed = 20

[node name="EndArea" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="Door" type="ColorRect" parent="EndArea"]
margin_left = 109.164
margin_top = 27.9463
margin_right = 122.164
margin_bottom = 77.9463
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndCollision" type="CollisionShape2D" parent="EndArea"]
position = Vector2( 115.621, 53.2215 )
shape = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_exited" from="LevelArea" to="." method="_on_LevelArea_body_exited"]
[connection signal="body_entered" from="EndArea" to="." method="_on_EndArea_body_entered"]
